// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginForm: validate when username and password is less than minimum length 1`] = `
Object {
  "password": "Password must be at least 6 characters",
  "username": "Username must be at least 2 characters and 320 characters max",
}
`;

exports[`LoginForm: validate when username is more validation length 1`] = `
Object {
  "password": "Please enter a password",
  "username": "Username must be at least 2 characters and 320 characters max",
}
`;

exports[`LoginForm: validate with empty values 1`] = `
Object {
  "password": "Please enter a password",
  "username": "Please enter a username",
}
`;

exports[`LoginForm: validate with values 1`] = `Object {}`;
